--- a/component.yaml
+++ b/component.yaml
@@ -9,6 +9,12 @@ inputs:
   title: Gradle task name
   description: Specifies Gradle task name.
   helpText:
+- key: "AC_PROJECT_PATH"
+  defaultValue: "$AC_PROJECT_PATH"
+  isRequired: false
+  title: Project Path
+  description: "Specifies the project path."
+  helpText:
 - key: "AC_GRADLE_TASK_EXTRA_PARAMETERS"
   isRequired: false
   title: Task Parameters
